--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "start": "nodemon src/index"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@apollo/server": "^4.9.2",
+    "@graphql-tools/mock": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "graphql": "^16.8.0",
+    "graphql-tag": "^2.12.6"
+  },
   "devDependencies": {
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.20"
